--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
-<html lang="en">
+<!-- TODO add class="dark" for darkmode -->
+<html lang="en" class="light">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -7,7 +8,7 @@
     <title>Vite + React</title>
   </head>
   <body class="w-2/3 m-auto">
-    <div id="root"></div>
+    <div id="root" class=""></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
