fix(h-scroll): h-scroll on small screen

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
-  <body class="w-2/3 m-auto">
-    <div id="root" class=""></div>
+  <body class="">
+    <div id="root" class="w-11/12 sm:w-10/12 md:w-10/12 lg:w-9/12 bg-cyan-200 sm:bg-purple-200 md:bg-emerald-200 lg:bg-orange-300 m-auto overflow-visible"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
