--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <!-- TODO add class="dark" for darkmode -->
-<html lang="en" class="light">
+<html lang="en" data-theme="dark">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
-  <body class="">
-    <div id="root" class="w-11/12 sm:w-10/12 md:w-10/12 lg:w-9/12 bg-cyan-200 sm:bg-purple-200 md:bg-emerald-200 lg:bg-orange-300 m-auto overflow-visible"></div>
+  <body class="" >
+    <div id="root" class="w-11/12 sm:w-10/12 md:w-10/12 lg:w-9/12 m-auto overflow-visible" ></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
