add form component

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <!-- TODO add class="dark" for darkmode -->
-<html lang="en"  data-theme="light">
+<html lang="en"  >
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
