--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hammas AI</title>
+    <title>Hammad AI</title>
   </head>
   <body class="" >
     <div id="root" class="w-11/12 sm:w-10/12 md:w-10/12 lg:w-9/12 m-auto overflow-visible" ></div>
