lightmode as default

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
-<!-- TODO add class="dark" for darkmode -->
-<html lang="en"  >
+<html lang="en"  data-theme="light">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
