content add and tweak styling
content for
- hero social links
- tech stack
- testimonials

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hammad AI</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   </head>
   <body class="" >
     <div id="root" class="w-11/12 sm:w-10/12 md:w-10/12 lg:w-9/12 m-auto overflow-visible" ></div>
